THRIFT-5256: Fix some compile warnings Client: c_glib Patch: wangyunjian

This closes #2207

Signed-off-by: wangyunjian <wangyunjian@huawei.com>